--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+python-xtermcolor (1.3-1) unstable; urgency=low
+
+  * New upstream release
+
+ -- Salvo 'LtWorf' Tomaselli <tiposchi@tiscali.it>  Thu, 21 Feb 2013 15:39:43 +0100
+
 python-xtermcolor (1.2-1) unstable; urgency=low
 
   * Initial release. (Closes: #695210)
