--- a/changelog
+++ b/changelog
@@ -1,8 +1,11 @@
-python-xtermcolor (1.3-1) unstable; urgency=low
+python-xtermcolor (1.2.1-1) unstable; urgency=low
 
   * New upstream release
+  * Updated patches to work with different path
+  * Dropped vt100 patch, now part of upstream
+  * Bumped Standards-Version to 3.9.6
 
- -- Salvo 'LtWorf' Tomaselli <tiposchi@tiscali.it>  Thu, 21 Feb 2013 15:39:43 +0100
+ -- Salvo 'LtWorf' Tomaselli <tiposchi@tiscali.it>  Tue, 15 Sep 2015 17:41:28 +0200
 
 python-xtermcolor (1.2-1) unstable; urgency=low
 
