--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 python-xtermcolor (1.2.1-3) UNRELEASED; urgency=low
 
   * Replace deprecated distutils with setuptools
+  * Bump compat level to 13
 
  -- Salvo 'LtWorf' Tomaselli <tiposchi@tiscali.it>  Wed, 04 Oct 2023 00:03:31 +0200
 
