--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ python-xtermcolor (1.2.1-3) UNRELEASED; urgency=low
   * Bump Standards-Version to 4.6.2
   * Drop minimum X-Python-Version and X-Python3-Version fields
   * Set Rules-Requires-Root to no
+  * New watch file
 
  -- Salvo 'LtWorf' Tomaselli <tiposchi@tiscali.it>  Wed, 04 Oct 2023 00:03:31 +0200
 
