--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-python-xtermcolor (1.2.1-3) UNRELEASED; urgency=low
+python-xtermcolor (1.2.1-3) unstable; urgency=low
 
   * Replace deprecated distutils with setuptools
   * Bump compat level to 13
